syntax = "proto3";
package version1_1;

message Transaction {
    bytes version = 1;
	bytes from = 2;
	bytes to = 3;
	bytes value = 4;
	int64 timestamp = 5;
	bytes signature = 6;
	uint64 id = 7;
	bytes transactionHash = 8;
	int64  nonce = 9;
    bytes puk = 10;
}

message InvalidTransactionRecord {
    Transaction tx = 1;
    ErrType errType = 2;
    enum ErrType {
        OUTOFBALANCE = 0;
        SIGFAILED = 1;
        INVOKE_CONTRACT_FAILED=2;
        DEPLOY_CONTRACT_FAILED=3;
        INVALID_PERMISSION = 4;
    }
    bytes errMsg = 3;
}
message InvalidTransactionRecords {
    repeated InvalidTransactionRecord records = 1;
}

message TransactionMeta {
    uint64 BlockIndex = 1;
    int64  Index = 2;
}
