syntax = "proto3";
package wrapper;

message BlockWrapper {
    bytes blockVersion = 1;
    bytes block = 2;
}

