syntax = "proto3";
package wrapper;

message TransactionWrapper {
    bytes transactionVersion = 1;
    bytes transaction = 2;
}
